--- a/android/app/src/main/res/layout/calibration_layout.xml
+++ b/android/app/src/main/res/layout/calibration_layout.xml
@@ -76,15 +76,15 @@
             android:layout_alignParentEnd="true" />
     </LinearLayout>
 
-    <fr.gi.utbm.lo53project.Viewport
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/calibration_canvas"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/add_calib_button" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/calib_viewport_layout"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/editText4"
+        android:layout_toStartOf="@+id/editText4" >
+
+    </LinearLayout>
 
 </LinearLayout>
