--- a/android/app/src/main/res/values/server_properties.xml
+++ b/android/app/src/main/res/values/server_properties.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="using_server">false</bool>
-    <string name="server_ip">192.168.2.159</string>
+    <bool name="using_server">true</bool>
+    <string name="server_ip">172.17.1.50</string>
     <integer name="server_port_calibration">3001</integer>
     <integer name="server_port_location">3002</integer>
 </resources>
