--- a/android/app/src/main/res/layout/location_layout.xml
+++ b/android/app/src/main/res/layout/location_layout.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Detection"
+        android:text="Location"
         android:id="@+id/textView_location"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
