--- a/android/app/src/main/res/layout/settings_layout.xml
+++ b/android/app/src/main/res/layout/settings_layout.xml
@@ -25,46 +25,98 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:columnCount="2"
-        android:rowCount="3">
+        android:rowCount="5">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Server IP"
-            android:id="@+id/textView_server_ip" />
+            android:id="@+id/textView_server_ip"
+            android:layout_row="0"
+            android:layout_column="0" />
 
         <EditText
-            android:layout_width="281dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
             android:id="@+id/editText_server_ip"
-            android:layout_weight="1" />
+            android:layout_row="0"
+            android:layout_column="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Location Port"
-            android:id="@+id/textView_server_port_location" />
+            android:id="@+id/textView_server_port_location"
+            android:layout_row="1"
+            android:layout_column="0" />
 
         <EditText
-            android:layout_width="281dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
             android:id="@+id/editText_server_port_location"
-            android:layout_weight="1" />
+            android:layout_row="1"
+            android:layout_column="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Calibration Port"
-            android:id="@+id/textView_server_port_calibration" />
+            android:id="@+id/textView_server_port_calibration"
+            android:layout_row="2"
+            android:layout_column="0" />
 
         <EditText
-            android:layout_width="281dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
             android:id="@+id/editText_server_port_calibration"
-            android:layout_weight="1" />
+            android:layout_row="2"
+            android:layout_column="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Default map width"
+            android:id="@+id/textView_default_map_width"
+            android:layout_row="3"
+            android:layout_column="0" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText_default_map_width"
+            android:layout_row="3"
+            android:layout_column="1" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Default map height"
+            android:id="@+id/textView_default_map_height"
+            android:layout_row="4"
+            android:layout_column="0" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText_default_map_height"
+            android:layout_row="4"
+            android:layout_column="1" />
+
     </GridLayout>
 
     <Button
